feat: Implement new sorting options and dynamic video metadata display based on the current sort order.

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -153,6 +153,9 @@
                         class="px-3 py-1.5 border border-gray-200 rounded text-sm focus:outline-none focus:border-black bg-white">
                         <option value="date-new">Recent</option>
                         <option value="views-high">Views</option>
+                        <option value="duration-long">Duration</option>
+                        <option value="upload-old">Upload date</option>
+                        <option value="comments-most">Comment count</option>
                         <option value="channel-az">Channel</option>
                         <option value="title-az">Title</option>
                         <option value="deleted-first">Unavailable</option>
@@ -221,7 +224,7 @@
                 </div>
                 <div class="flex items-center gap-3 text-xs text-gray-400">
                     <span class="channel-title truncate"></span>
-                    <span class="view-count shrink-0"></span>
+                    <span class="dynamic-metadata shrink-0"></span>
                 </div>
             </div>
         </div>
