feat: add button to copy filtered video IDs to the clipboard

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -160,6 +160,15 @@
                         <option value="title-az">Title</option>
                         <option value="deleted-first">Unavailable</option>
                     </select>
+
+                    <button id="copy-ids-button" title="Copy video IDs as list"
+                        class="p-2 border border-gray-200 rounded text-gray-500 hover:text-black hover:border-black transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect width="14" height="14" x="8" y="8" rx="2" ry="2" />
+                            <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2" />
+                        </svg>
+                    </button>
                 </div>
             </div>
 
