--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -96,6 +96,24 @@
         .loading-spinner {
             animation: rotate 1s linear infinite;
         }
+
+        /* Skeleton Shimmer */
+        @keyframes shimmer {
+            0% {
+                background-position: -200% 0;
+            }
+
+            100% {
+                background-position: 200% 0;
+            }
+        }
+
+        .skeleton {
+            background: linear-gradient(90deg, #f3f4f6 25%, #f9fafb 50%, #f3f4f6 75%);
+            background-size: 200% 100%;
+            animation: shimmer 1.5s infinite linear;
+            border-radius: 2px;
+        }
     </style>
 </head>
 
@@ -172,13 +190,6 @@
                 </div>
             </div>
 
-            <div id="content-loader" class="hidden py-20 text-center text-gray-400">
-                <div
-                    class="loading-spinner inline-block w-6 h-6 border-2 border-gray-200 border-t-black rounded-full mb-2">
-                </div>
-                <p class="text-sm">Fetching videos...</p>
-            </div>
-
             <div id="empty-state" class="hidden py-20 text-center border border-dashed border-gray-200 rounded">
                 <p class="text-gray-400">No results found.</p>
             </div>
@@ -235,6 +246,16 @@
                     <span class="channel-title truncate"></span>
                     <span class="dynamic-metadata shrink-0"></span>
                 </div>
+            </div>
+        </div>
+    </template>
+
+    <template id="skeleton-template">
+        <div class="flex flex-col gap-3">
+            <div class="skeleton w-full aspect-video rounded-sm"></div>
+            <div class="flex flex-col gap-2">
+                <div class="skeleton h-4 w-5/6"></div>
+                <div class="skeleton h-3 w-1/2"></div>
             </div>
         </div>
     </template>
