--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -160,7 +160,13 @@
             <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-12">
                 <div class="space-y-1">
                     <h2 class="text-2xl font-semibold">History</h2>
-                    <p id="results-count" class="text-sm text-gray-500">0 videos</p>
+                    <div class="flex items-center gap-3">
+                        <p id="results-count" class="text-sm text-gray-500">0 videos</p>
+                        <button id="load-all-button"
+                            class="hidden text-xs font-semibold px-2 py-1 bg-gray-100 hover:bg-black hover:text-white rounded transition-colors">
+                            Load all
+                        </button>
+                    </div>
                 </div>
 
                 <div class="flex items-center gap-2">
