feat: Add confetti celebration when all videos are fetched in "Load All" mode.

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -21,6 +21,7 @@
     <!-- Google Scripts -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
