feat: Make video thumbnails clickable by wrapping them in a link and updating JavaScript to set the `href` for all video links.

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -262,13 +262,13 @@
     <!-- Templates -->
     <template id="video-card-template">
         <div class="video-card group flex flex-col gap-3">
-            <div class="relative w-full aspect-video">
+            <a href="" target="_blank" class="video-link block relative w-full aspect-video">
                 <img class="video-thumbnail w-full h-full object-cover bg-gray-100 rounded-sm" src="" alt="">
                 <div
                     class="deleted-overlay hidden absolute inset-0 bg-white/90 flex items-center justify-center text-[10px] font-bold text-gray-400">
                     UNAVAILABLE
                 </div>
-            </div>
+            </a>
             <div class="flex flex-col gap-1 min-w-0">
                 <div class="flex justify-between items-start gap-2">
                     <a href="" target="_blank" class="video-link block min-w-0">
