--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -158,42 +158,45 @@
 
         <!-- App -->
         <div id="view-content" class="hidden">
-            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-12">
+            <div class="flex flex-col lg:flex-row lg:items-center justify-between gap-6 mb-12">
                 <div class="space-y-1">
                     <h2 class="text-2xl font-semibold">History</h2>
-                    <div class="flex items-center gap-3">
+                    <div class="flex flex-wrap items-center gap-x-3 gap-y-1">
                         <p id="results-count" class="text-sm text-gray-500">0 videos</p>
                         <button id="load-all-button"
-                            class="hidden text-xs font-semibold px-2 py-1 bg-gray-100 hover:bg-black hover:text-white rounded transition-colors">
+                            class="hidden whitespace-nowrap text-[10px] font-bold uppercase tracking-wider px-2 py-1 bg-gray-100 hover:bg-black hover:text-white rounded transition-colors">
                             Load all
                         </button>
                     </div>
                 </div>
 
-                <div class="flex items-center gap-2">
+                <div class="flex flex-wrap items-center gap-2">
                     <input type="text" id="search-input" placeholder="Search..."
-                        class="px-3 py-1.5 border border-gray-200 rounded text-sm focus:outline-none focus:border-black w-full md:w-48">
+                        class="flex-grow md:flex-grow-0 px-3 py-1.5 border border-gray-200 rounded text-sm focus:outline-none focus:border-black w-full md:w-48">
 
-                    <select id="sort-select"
-                        class="px-3 py-1.5 border border-gray-200 rounded text-sm focus:outline-none focus:border-black bg-white">
-                        <option value="date-new">Recent</option>
-                        <option value="views-high">Views</option>
-                        <option value="duration-long">Duration</option>
-                        <option value="upload-old">Upload date</option>
-                        <option value="comments-most">Comment count</option>
-                        <option value="channel-az">Channel</option>
-                        <option value="title-az">Title</option>
-                        <option value="deleted-first">Unavailable</option>
-                    </select>
+                    <div class="flex items-center gap-2 flex-grow md:flex-grow-0">
+                        <select id="sort-select"
+                            class="flex-grow px-3 py-1.5 border border-gray-200 rounded text-sm focus:outline-none focus:border-black bg-white min-w-[130px]">
+                            <option value="date-new">Recent</option>
+                            <option value="views-high">Views</option>
+                            <option value="duration-long">Duration</option>
+                            <option value="upload-old">Upload date</option>
+                            <option value="comments-most">Comment count</option>
+                            <option value="channel-az">Channel</option>
+                            <option value="title-az">Title</option>
+                            <option value="deleted-first">Unavailable</option>
+                        </select>
 
-                    <button id="copy-ids-button" title="Copy video IDs as list"
-                        class="p-2 border border-gray-200 rounded text-gray-500 hover:text-black hover:border-black transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <rect width="14" height="14" x="8" y="8" rx="2" ry="2" />
-                            <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2" />
-                        </svg>
-                    </button>
+                        <button id="copy-ids-button" title="Copy video IDs as list"
+                            class="shrink-0 p-2 border border-gray-200 rounded text-gray-500 hover:text-black hover:border-black transition-colors">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <rect width="14" height="14" x="8" y="8" rx="2" ry="2" />
+                                <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2" />
+                            </svg>
+                        </button>
+                    </div>
 
                     <button id="insights-toggle"
                         class="flex items-center gap-2 px-3 py-1.5 border border-gray-200 rounded text-sm font-medium hover:border-black transition-colors">
