feat: add "dislikes" link to navigation with hover styling

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             background: linear-gradient(135deg, #1a472a 0%, #2d7a4a 100%);
             border-color: transparent;
         }
+
+        .links a.link-dislikes:hover {
+            background: linear-gradient(135deg, #434343 0%, #000000 100%);
+            border-color: transparent;
+        }
     </style>
 </head>
 
@@ -73,6 +78,7 @@
         <div class="links">
             <a href="games/" class="link-games">games</a>
             <a href="birds/" class="link-birds">birds</a>
+            <a href="dislikes/" class="link-dislikes">dislikes</a>
         </div>
     </div>
 </body>
