fix: Bump app version to 1.0.1, add initialization log, and display it in the footer.

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -258,7 +258,10 @@
                 <a href="privacy.html" class="hover:text-black">Privacy</a>
                 <a href="https://github.com/jimmyorr/cowneck" target="_blank" class="hover:text-black">GitHub</a>
             </div>
-            <span>© 2026</span>
+            <div class="flex gap-4 items-center">
+                <span>© 2026</span>
+                <span class="text-[9px] opacity-40">v1.0.1</span>
+            </div>
         </div>
     </footer>
 
