--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -7,13 +7,13 @@
     <title>Dislikes</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" type="image/png" href="icon.png">
+    <link id="favicon" rel="icon" type="image/png" href="icon.png">
 
     <!-- iOS support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Dislikes">
-    <link rel="apple-touch-icon" href="icon.png">
+    <link id="apple-icon" rel="apple-touch-icon" href="icon.png">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
@@ -131,7 +131,8 @@
 
     <header class="border-b border-gray-100 py-4">
         <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
-            <h1 class="text-lg font-medium tracking-tight">Dislikes</h1>
+            <button id="mode-toggle"
+                class="text-lg font-medium tracking-tight hover:opacity-70 transition-opacity">Dislikes</button>
 
             <div id="auth-indicator" class="hidden flex items-center gap-4 text-sm">
                 <span class="text-gray-400">Authenticated</span>
@@ -154,8 +155,9 @@
 
         <!-- Landing -->
         <div id="view-welcome" class="py-20 text-center">
-            <h2 class="text-3xl font-semibold mb-4">Your YouTube disliked videos.</h2>
-            <p class="text-gray-500 mb-10 max-w-md mx-auto">View, filter, and sort your dislikes. Simple, private, and
+            <h2 id="welcome-title" class="text-3xl font-semibold mb-4">Your YouTube disliked videos.</h2>
+            <p id="welcome-desc" class="text-gray-500 mb-10 max-w-md mx-auto">View, filter, and sort your dislikes.
+                Simple, private, and
                 minimal.</p>
             <button id="hero-auth-button" disabled
                 class="px-8 py-3 bg-black text-white rounded font-medium disabled:opacity-50 disabled:cursor-not-allowed transition-opacity">
@@ -169,7 +171,7 @@
         <div id="view-content" class="hidden">
             <div class="flex flex-col lg:flex-row lg:items-center justify-between gap-6 mb-12">
                 <div class="space-y-1">
-                    <h2 class="text-2xl font-semibold">History</h2>
+                    <h2 id="section-title" class="text-2xl font-semibold">History</h2>
                     <div class="flex flex-wrap items-center gap-x-3 gap-y-1">
                         <p id="results-count" class="text-sm text-gray-500">0 videos</p>
                         <button id="load-all-button"
