--- a/games/index.html
+++ b/games/index.html
@@ -258,6 +258,11 @@
                 <a href="high-fidelity.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>🚀 Space Scale</h2>
+                <p>Space is huge. Can you guess how huge?</p>
+                <a href="space.html" class="btn">PLAY NOW</a>
+            </div>
         </div>
 
         <h2 class="section-header">Oliver</h2>
