--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -295,7 +295,7 @@
             </div>
             <div class="flex gap-4 items-center">
                 <span>© 2026</span>
-                <span class="text-[9px] opacity-40">v1.0.6</span>
+                <span id="app-version" class="text-[9px] opacity-40"></span>
             </div>
         </div>
     </footer>
@@ -392,6 +392,7 @@
             document.addEventListener('click', () => settingsMenu.classList.add('hidden'));
         }
     </script>
+    <script src="version.js"></script>
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
